--- a/quotes/quote/api-reference/api.yaml
+++ b/quotes/quote/api-reference/api.yaml
@@ -1799,7 +1799,7 @@ components:
                 type: string
         items:
           type: array
-          description: A list of quote items
+          description: A list of quote items.
           items:
             type: object
             properties:
@@ -1822,7 +1822,7 @@ components:
                 properties:
                   type:
                     type: string
-                    description: Defines if product is external or internal.
+                    description: Defines if product is external or internal. If the product is internal, it's taken from the Emporix Product Service. If the price is external, it's a custom product from external system.
                     enum:
                       - INTERNAL
                       - EXTERNAL
@@ -1861,11 +1861,11 @@ components:
                             type: number
                   mixins:
                     type: object
-                    description: Mixins request
+                    description: Mixins request.
                     additionalProperties: true
                   metadata:
                     type: object
-                    description: Metadata request
+                    description: Metadata request.
                     properties:
                       mixins:
                         type: object
@@ -1877,7 +1877,7 @@ components:
                 properties:
                   type:
                     type: string
-                    description: Defines if product is external or internal.
+                    description: Defines if product is external or internal. If the product is internal, it's taken from the Emporix Product Service. If the price is external, it's a custom product from external system.
                     enum:
                       - INTERNAL
                       - EXTERNAL
@@ -1925,7 +1925,7 @@ components:
           additionalProperties: true
         metadata:
           type: object
-          description: Quote metadata details
+          description: Quote metadata details.
           properties:
             mixins:
               type: object
@@ -2063,7 +2063,7 @@ components:
                 properties:
                   type:
                     type: string
-                    description: Defines if product is external or internal.
+                    description: Defines if product is external or internal. If the product is internal, it's taken from the Emporix Product Service. If the price is external, it's a custom product from external system.
                     enum:
                       - INTERNAL
                       - EXTERNAL
@@ -2106,7 +2106,7 @@ components:
                 properties:
                   type:
                     type: string
-                    description: Defines if price is internal or external.
+                    description: Defines if price is internal or external. If the price is internal, it's taken from the Emporix Price Service. If the price is external, it's a custom price from external system.
                     enum:
                       - INTERNAL
                       - EXTERNAL
