--- a/quotes/quote/api-reference/api.yaml
+++ b/quotes/quote/api-reference/api.yaml
@@ -2035,7 +2035,7 @@ components:
           $ref: '#/components/schemas/QuoteShipping'
         items:
           type: array
-          description: Quote items
+          description: Quote items.
           items:
             type: object
             properties:
