--- a/artificial-intelligence/ai-service/api-reference/api.yml
+++ b/artificial-intelligence/ai-service/api-reference/api.yml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: AI Service
   version: ''
-  description: The service facilitates and streamlines e-commerce processes of product marketing.
+  description: The service facilitates and streamlines e-commerce processes of product marketing
   contact:
     name: Emporix
     url: https://emporix.com
