--- a/quotes/quote/api-reference/api.yaml
+++ b/quotes/quote/api-reference/api.yaml
@@ -923,7 +923,7 @@ paths:
                         productId: 74698542309b06dc46d3cf19fe
                   - op: REMOVE
                     path: /items/124dfa82410fas824kfa
-              Add item to quote:
+              Add item to a quote:
                 value:
                   - op: ADD
                     path: /items
@@ -941,7 +941,7 @@ paths:
                             taxRate: 20
                         product:
                           productId: 74698542309b06dc46d3cf19fe
-              Add mixin to the quote:
+              Add mixin to a quote:
                 value:
                   - op: ADD
                     path: /mixins/customAttributes
@@ -951,16 +951,66 @@ paths:
                   - op: ADD
                     path: /metadata/mixins/newAttributes
                     value: 'https://res.cloudinary.com/saas-ag/raw/upload/schemata/CAAS/customAttributes.json'
-              Replace mixin value in the quote:
+              Replace mixin value in a quote:
                 value:
                   - op: REPLACE
                     path: /mixins/customAttributes/unit
                     value: kg
-              Remove mixin value from the quote:
+              Remove mixin value from a quote:
                 value:
                   - op: REMOVE
                     path: /mixins/customAttributes/unit
-              Replace item list of the quote:
+              Add mixin and metadata to a quote item:
+                value:
+                  - op: ADD
+                    path: /mixins/design
+                    value:
+                      product_type: item
+                      freezer_number_of_shelves_baskets: 123
+                  - op: ADD
+                    path: /metadata/mixins/design
+                    value: 'https://storage.googleapis.com/emporix_mixin/freezers-design.json'
+              Replace mixin and metadata in a quote item:
+                value:
+                  - op: REPLACE
+                    path: /mixins/quoteCustomAttributes
+                    value:
+                      itemLevelAttribute: new value
+                  - op: REPLACE
+                    path: /metadata/mixins/quoteCustomAttributes
+                    value: 'https://storage.googleapis.com/emporix_mixin/freezers-design.json'
+              Remove mixin and metadata from a quote item:
+                value:
+                  - op: REMOVE
+                    path: /mixins/quoteCustomAttributes/itemLevelAttribute
+                  - op: REMOVE
+                    path: /metadata/mixins/quoteCustomAttributes
+              Add mixin and metadata to a quote product:
+                value:
+                  - op: ADD
+                    path: /mixins/design
+                    value:
+                      product_type: item
+                      freezer_number_of_shelves_baskets: 123
+                  - op: ADD
+                    path: /metadata/mixins/design
+                    value: 'https://storage.googleapis.com/emporix_mixin/freezers-design.json'
+              Replace mixin and metadata in a quote product:
+                value:
+                  - op: REPLACE
+                    path: /mixins/quoteCustomAttributes
+                    value:
+                      productLevelAttribute: new value
+                  - op: REPLACE
+                    path: /metadata/mixins/quoteCustomAttributes
+                    value: 'https://storage.googleapis.com/emporix_mixin/freezers-design.json'
+              Remove mixin and metadata from a quote product:
+                value:
+                  - op: REMOVE
+                    path: /mixins/quoteCustomAttributes/productLevelAttribute
+                  - op: REMOVE
+                    path: /metadata/mixins/quoteCustomAttributes
+              Replace item list of a quote:
                 value:
                   - op: REPLACE
                     path: /items
@@ -978,7 +1028,7 @@ paths:
                             taxRate: 20
                         product:
                           productId: 74698542309b06dc46d3cf19fe
-              Replace item in quote:
+              Replace item in a quote:
                 value:
                   - op: REPLACE
                     path: /items/2s298854309b06d46d3cf19fe
@@ -995,18 +1045,18 @@ paths:
                           taxRate: 20
                       product:
                         productId: 74698542309b06dc46d3cf19fe
-              Delete item in quote:
+              Delete item from a quote:
                 value:
                   - op: REMOVE
                     path: /items/124dfa8241sd0fas824kfa
-              Delete items in quote:
+              Delete items from a quote:
                 value:
                   - op: REMOVE
                     path: /items
                     value:
                       - itemId: 124dfa8241sd0fas824kfa
                       - itemId: 124dfa8241sd0fas824k7b
-              Delete company name in quote:
+              Delete company name in a quote:
                 value:
                   - op: REMOVE
                     path: /companyName
@@ -1030,7 +1080,7 @@ paths:
                   - op: REPLACE
                     path: /validTo
                     value: '2024-04-02T13:06:15.280Z'
-              Change quantity of the item:
+              Change quantity of an item:
                 value:
                   - op: REPLACE
                     path: /items/124dfa8241sd0fas824kfa
@@ -1047,38 +1097,38 @@ paths:
                           taxRate: 20
                       product:
                         productId: 74698542309b06dc46d3cf19fe
-              Change price of the item:
+              Change price of an item:
                 value:
                   - op: REPLACE
                     path: /items/124dfa8241sd0fas824kfa/price
                     value:
                       totalNetValue: 13
-              Set comment to the quote:
+              Set comment to a quote:
                 value:
                   - op: REPLACE
                     path: /comment
                     value: Comment to add
-              Change shipping address of the quote:
+              Change shipping address of a quote:
                 value:
                   - op: REPLACE
                     path: /shippingAddressId
                     value: 74698542309b06dc46d3cf19fa
-              Change billing address of the quote:
+              Change billing address of a quote:
                 value:
                   - op: REPLACE
                     path: /billingAddressId
                     value: 74698542309b06dc46d3cf19fa
-              Change company name of the quote:
+              Change company name of a quote:
                 value:
                   - op: REPLACE
                     path: /companyName
                     value: new the best company name
-              Change customer of the quote:
+              Change customer of a quote:
                 value:
                   - op: REPLACE
                     path: /customerId
                     value: C12345678
-              Change shipping of the quote:
+              Change shipping of a quote:
                 value:
                   - op: REPLACE
                     path: /shipping
